--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/ucbEM2017/">Home</a></li>
+	        		<li><a href="ucbEM2017/">Home</a></li>
 
-	        		<li><a href="ucbEM2017//blog">Blog</a></li>
+	        		<li><a href="ucbEM2017/blog">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
