--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="https://df6000.github.io/ucbEM2017/">Home</a></li>
+	        		<li><a href="{{ site.url }}">Home</a></li>
 
-	        		<li><a href="https://df6000.github.io/ucbEM2017/blog/">Blog</a></li>
+	        		<li><a href="{{ site.url }}/blog/">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
