--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="{{ site.url }}">Home</a></li>
 
-	        		<li><a href="{{ site.url }}/blog/">Blog</a></li>
+	        		<li><a href="{{ site.url }} blog/">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
